Fixed default vertical alignment for IE9

--- a/src/scss/plugin/basis-ie9/object/component/_grid.scss
+++ b/src/scss/plugin/basis-ie9/object/component/_grid.scss
@@ -74,6 +74,7 @@
 	font-size: $bs-font-size-md;
 	display: inline-block;
 	text-align: left;
+	vertical-align: top;
 	width: 100%;
 }
 
